# hyprwire

./: CMakeLists.txt
.github/workflows/: nix.yml
include/hyprwire/core/implementation/: Object.hpp  ServerImpl.hpp  Types.hpp
nix/: default.nix
scanner/: main.cpp
src/core/client/: ClientObject.cpp  ClientSocket.cpp  ClientSocket.hpp
src/core/message/messages/: FatalProtocolError.cpp  FatalProtocolError.hpp
src/core/server/: ServerClient.cpp  ServerClient.hpp  ServerObject.cpp  ServerObject.hpp  ServerSocket.cpp
src/core/socket/: SocketHelpers.cpp
src/core/wireObject/: IWireObject.cpp  IWireObject.hpp
src/helpers/: Env.cpp  Env.hpp  Syscalls.cpp  Syscalls.hpp
tests/: Client.cpp  Server.cpp
tests/unit/: FFIEnv.cpp  IWireObjectMatrix.cpp  IntegrationCore.cpp  IntegrationSemantics.cpp  IntegrationSocketPath.cpp  MessageControl.cpp  MessageGenericProtocol.cpp  MessageHelloHandshake.cpp  MessageMagic.cpp  MessageParseData.cpp  MessageParserMatrix.cpp  MessageType.cpp  SyscallSeams.cpp  VarInt.cpp
